Modelo_test_web-site

--- a/index.html
+++ b/index.html
@@ -221,16 +221,14 @@
                     <p class="text-uppercase">Nombre</p>
                     <div class="form-wrap">
                       <input class="form-input" id="contact-first-name" type="text" name="name"
-                        data-constraints="@Required">
-                      <label class="form-label" for="contact-first-name">Ingrese su nombre completo</label>
+                        data-constraints="@Required" placeholder="Ingrese su nombre completo">
                     </div>
                   </div>
                   <div class="cell-lg-12 cell-md-4">
                     <p class="text-uppercase">Celular</p>
                     <div class="form-wrap">
                       <input class="form-input" id="contact-first-name" type="text" name="name"
-                        data-constraints="@Required">
-                      <label class="form-label" for="contact-first-name">Ingrese celular de contacto</label>
+                        data-constraints="@Required" placeholder="Ingrese celular de contacto">
                     </div>
                   </div>
                   <div class="cell-lg-12 cell-md-4 cell-sm-6">
