--- a/contacto.html
+++ b/contacto.html
@@ -181,22 +181,19 @@
                     <div class="cell-sm-6">
                       <div class="form-wrap">
                         <input class="form-input" id="contact-first-name" type="text" name="name"
-                          data-constraints="@Required">
-                        <label class="form-label" for="contact-first-name">Ingrese su nombre</label>
+                          data-constraints="@Required" placeholder="Ingrese su nombre">
                       </div>
                     </div>
                     <div class="cell-sm-6">
                       <div class="form-wrap">
                         <input class="form-input" id="contact-last-name" type="text" name="phone"
-                          data-constraints="@Numeric">
-                        <label class="form-label" for="contact-last-name">Ingrese su N° celular</label>
+                          data-constraints="@Numeric" placeholder="Ingrese su N° celular">
                       </div>
                     </div>
                     <div class="cell-xs-12">
                       <div class="form-wrap">
-                        <textarea class="form-input" id="contact-message" name="message"
-                          data-constraints="@Required"></textarea>
-                        <label class="form-label" for="contact-message">Ingrese su mensaje</label>
+                        <textarea class="form-input" id="contact-message" name="message" data-constraints="@Required"
+                          placeholder="Ingrese su mensaje"></textarea>
                       </div>
                     </div>
                     <div class="cell-sm-6">
