--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <!-- Site Title-->
-  <title>Holtel</title>
+  <title>Hotel</title>
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
