Modelo_test_web-site

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                           <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Sustítulo aqui</h4>
                           <h3 data-caption-animate="slideInLeft" data-caption-delay="800">Texto en blanco!</h3>
                         </div><a class="button button-effect-ujarak button-lg button-white-outline button-square"
-                          href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>Ver
+                          href="nosotros.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>Ver
                             más</span></a>
                       </div>
                     </div>
@@ -185,7 +185,7 @@
                           </h4>
                           <h3 data-caption-animate="slideInLeft" data-caption-delay="800">Texto en blanco 2!</h3>
                         </div><a class="button button-effect-ujarak button-lg button-white-outline button-square"
-                          href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>Ver
+                          href="nosotros.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>Ver
                             más</span></a>
                       </div>
                     </div>
@@ -200,7 +200,7 @@
                           <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Sustítulo 3 aqui</h4>
                           <h3 data-caption-animate="slideInLeft" data-caption-delay="800">Texto en blanco 3!</h3>
                         </div><a class="button button-effect-ujarak button-lg button-white-outline button-square"
-                          href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>Ver
+                          href="nosotros.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>Ver
                             más</span></a>
                       </div>
                     </div>
